# python-for-ai-engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLAGSHIP_PROJECTS_ROADMAP.md  LICENSE.md  PINNED_REPOSITORIES.md  PROFILE_README.md  README.md  RECRUITER_PLAYBOOK.md  REPOSITORIES_AUDIT.md  SECURITY.md  index.html  metadata.json  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  dependabot.yml  python-tests.yml
docs/: architecture.md  coding-guidelines.md  faq.md  roadmap.md
examples/01_variables/: README.md  comments.py  exercises.py  input_output.py  type_conversion.py  variables.py
examples/02_data_types/: README.md  dictionaries.py  exercises.py  lists.py  numbers.py  sets.py  strings.py  tuples.py  type_checking.py
examples/03_operators/: README.md  arithmetic.py  assignment.py  bitwise.py  comparison.py  exercises.py  identity.py  logical.py  membership.py  precedence.py
examples/04_Conditions/: README.md  elif.py  exercises.py  if_else.py  if_statement.py  match_case.py  nested_if.py  validation_examples.py
examples/05_loops/: README.md  break_continue_pass.py  enumerate_zip.py  exercises.py  for_loop.py  interview_questions.md  list_comprehension.py  nested_loops.py  range_function.py  real_world_examples.py  (+1 more)
src/: __init__.py  config.py  constants.py  logger.py  main.py  utils.py
tests/: __init__.py  test_constants.py  test_main.py  test_utils.py
(+17 files in other folders)
